Closed
Bug 22692
Opened 25 years ago
Closed 25 years ago
Removing a floater deletes its frames but not its views
Categories
(Core :: Layout, defect, P3)
Tracking
()
VERIFIED
FIXED
People
(Reporter: sidr, Assigned: troy)
References
()
Details
Attachments
(3 files)
Outline:
testing the page at http://www.mozilla.org/newlayout/xml/books/books.xml ,
if any of the sort-by buttons are pressed while the book-list is presented
in its expanded style, text-boxes are orphaned on the right if the
[Toggle Style] button is pressed again to contract the book-list.
(This does not happen if the list is sorted while compact).
Steps to Reproduce:
1. View the page at the URL
2. Press the [Toggle Style] button to make the cover illustrations
and synopses in the textboxes appear.
3. Press any of the 3 "Sort by" buttons.
4. Press the [Toggle Style] button to change the book-list back to its
compact style.
5. Press the [Toggle Style] button to make the cover illustrations
and synopses in the textboxes appear.
6. Press the [Toggle Style] button to change the book-list back to its
compact style.
Actual Results:
A. After step 4, textboxes will be orphaned on the right side of the window.
B. These textboxes will all have the same contents, usually but not always
corresponding to the upper-leftmost textbox before compacting the list.
C. Once the orphaned textboxes appear, they stay, even if the Mozilla
window is repainted entirely by minimizing and restoring it.
Expected Results:
None of that.
Tested with:
1999-12-25-08-M13 nightly binary on Windows NT 4.0sp3
Additional Information:
This must be closely related to bug 22686 "Resizing orphans text boxes outside
their parent table cells", but is unrelated to window width or arrangement of
the books as 2x3 or 3x2, as seen there (this bug happens at any window width,
and does not change when window width is changed).
Needs to be narrowed down so we can determine what the problem is.
Comment 2•25 years ago
|
||
I'm attaching a simplified test case. When the floater is removed by calling
removeChild() from JS, its frames get deleted, but the views don't. Troy, I'm
giving this to you...
Assignee: nisheeth → troy
Comment 3•25 years ago
|
||
Comment 4•25 years ago
|
||
Comment 5•25 years ago
|
||
Comment 6•25 years ago
|
||
Updating summary. To reproduce:
1) Save books.xml, books.js, common.css in a local dir.
2) Load books.xml
3) Click on remove.
You'll see the border around the floated block go away, but the text field
will stay around.
Summary: Sorting orphans text boxes outside their parent table cells → Removing a floater deletes its frames but not its views
The problem was in nsLineBox::RemoveFloater(). It was always returning PR_FALSE
and so the block code couldn't find the line and never deleted the frame. The
floater was removed from the child list, though
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment hidden (collapsed) |
You need to log in
before you can comment on or make changes to this bug.
Description
•