b=22692 Changed RemoveFloater() to return PR_FALSE if the floater is associated with that line